--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "dkb4rb.io"
 title_separator          : "-"
 name                     : "Dkb4rb"
 description              : "Posts about security, CTFs and networking"
-url                      : "https://dkb4rb.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://dkb4rb.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "github/github.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 logo                     : "/assets/images/masthead.png"
